--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -12,6 +12,7 @@ $text-color: #000;
 $text-alt-color: #353535;
 $text-light: #fff;
 $logo-color: #101010;
+$ico-color: #7E7E7E;
 $bg-color: #F6F6F6;
 $bg-light: #fff;
 $loc-color: #EAEAEA;
@@ -21,13 +22,6 @@ $btn-top-color: #FF79DA;
 $btn-bot-color: #9356DC;
 
 $line-height-base: 1.428571429;
-
-$main-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.1);
-$loc-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
-$btn-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.25);
-$btn-hover-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.35);
-
-
 
 $btn-gradient: linear-gradient(0deg, $btn-bot-color 0%, $btn-top-color 100%);
 $btn-hover-gradient: linear-gradient(0deg, lighten($btn-bot-color, 5%) 0%, lighten($btn-top-color, 5%) 100%);
