--- a/scss/components/_like.scss
+++ b/scss/components/_like.scss
@@ -1,29 +1,50 @@
 .fav {
     position: relative;
-    width: 24px;
-    height: 24px;
+    @include like-size;
     z-index: 50;
     cursor: pointer;
     
     .like {
         position: absolute;
-        width: 24px;
-        height: 24px;
+        @include like-size;
         display: block;
         transition: all .3s ease-in-out;
 
-        .lk-off {
+        span {
             @extend .like;
-            opacity: 1;
-            background: $text-color;
-            clip-path: path("M12 21.593c-5.63-5.539-11-10.297-11-14.402 0-3.791 3.068-5.191 5.281-5.191 1.312 0 4.151.501 5.719 4.457 1.59-3.968 4.464-4.447 5.726-4.447 2.54 0 5.274 1.621 5.274 5.181 0 4.069-5.136 8.625-11 14.402m5.726-20.583c-2.203 0-4.446 1.042-5.726 3.238-1.285-2.206-3.522-3.248-5.719-3.248-3.183 0-6.281 2.187-6.281 6.191 0 4.661 5.571 9.429 12 15.809 6.43-6.38 12-11.148 12-15.809 0-4.011-3.095-6.181-6.274-6.181");
+
+            &::after {
+                content: '';
+                @include like-size;
+                background-repeat: no-repeat;
+                display: block;
+            }
+
+            &.lk-off {
+                opacity: 1;
+            
+                &::after {
+                    background-image: url(../images/like.svg);
+                }
+            }
+
+            &.lk-on {
+                opacity: 0;
+                
+                &::after {
+                    background-image: url(../images/like-on.svg);
+                }
+            }
         }
 
-        .lk-on {
-            @extend .like;
-            opacity: 0;
-            background: $btn-gradient;
-            clip-path: path("M12 4.248c-3.148-5.402-12-3.825-12 2.944 0 4.661 5.571 9.427 12 15.808 6.43-6.381 12-11.147 12-15.808 0-6.792-8.875-8.306-12-2.944z");
+        &:hover {
+            .lk-off {
+                opacity: 0;
+            }
+
+            .lk-on {
+                opacity: 1;
+            }
         }
     }
 
@@ -39,6 +60,6 @@
             .lk-on {
                 opacity: 1;
             }
-        } 
+        }
     }
 }
